@@ -43,6 +43,12 @@ GNU coreutils NEWS                                    -*- outline -*-
   field can be in any column.  If there is no source column, then df
   prints 'total' into the target column.
 
+  df now properly outputs file system information with bind mounts present on
+  the system by skipping duplicate entries (identified by the device number).
+
+  df now skips the early-boot pseudo file system type "rootfs" unless either
+  the -a option or "-t rootfs" is specified.
+
   nl no longer supports the --page-increment option which was deprecated
   since coreutils-7.5.  Use --line-increment instead.
 
